# simple_offer

./: .gitignore  Dockerfile  README.MD  docker-compose.yml  pyproject.toml
docs/: analytics.json  index.html  script.js
scripts/: run.sh
src/: bot.py  constants.py  settings.py
src/analytics/: parser.py  push.py  run.py
src/collectors/: headhunter.py
src/dao/: dao.py  middleware.py  models.py
src/database/: dao.py  database.py  middleware.py  models.py  services.py
src/handlers/: base.py  user_settings.py  utils.py  vacancy_sender.py
src/keyboards/: markups.py
src/migration/: env.py
src/migration/versions/: a7ca05e7017f_initial_revision.py
src/params_generators/: headhunter.py  utils.py
