[project]
name = "simple-offer"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Korolev",email = "niki.korolev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "aiogram (>=3.19.0,<4.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "redis (>=5.2.1,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"

[tool.poetry]
package-mode = false